@@ -10,6 +10,8 @@ The module includes classes:
 
 - `HTML::Canvas`, a Raku implementation of the basic HTML Canvas 2D API.
 - `HTML::Canvas::Image` - for image loading in a variety of formats
+- `HTML::Canvas::Gradient` - for image gradients
+- `HTML::Canvas::Path2` - for path objects
 - `HTML::Canvas::To::Cairo` - a built-in renderer, which can output to several formats,
  including PNG, SVG and PDF.
 
@@ -133,6 +135,7 @@ my $html = "<html><body>" ~ @html-body.join ~ "</body></html>";
 
 ```
 
+
 `HTML::Canvas::Image` can load a variety of image formats. The built-in
 `HTML::Canvas::To::Cairo` renderer only supports PNG images, as below:
 
@@ -144,6 +147,44 @@ Back-end                  | PNG | GIF |JPEG | BMP
 `HTML::Canvas::To::Cairo` | X   |     |     |
 `HTML::Canvas::To::PDF`   | X   | X   | X   |
 
+
+## Paths
+
+`HTML::Canvas::Path2D` can be used to create a re-usable path that can be passed to calls to the `fill()` or `stroke()` methods:
+
+```
+use HTML::Canvas;
+use HTML::Canvas::Path2D;
+
+my HTML::Canvas \ctx .= new;
+
+# Create path
+my HTML::Canvas::Path2D \region .= new;
+region.moveTo(30, 90);
+region.lineTo(110, 20);
+region.lineTo(240, 130);
+region.lineTo(60, 130);
+region.lineTo(190, 20);
+region.lineTo(270, 90);
+region.closePath();
+
+ctx.fillStyle = 'green';
+ctx.fill(region, 'evenodd');
+
+ctx.translate(100, 100);
+ctx.fillStyle = 'blue';
+ctx.fill(region);
+```
+
+The following methods can be used in path construction:
+
+- `moveTo(Numeric \x, Numeric \y)`
+- `lineTo(Numeric \x, Numeric \y)`
+- `quadraticCurveTo(Numeric \cx, Numeric \cy, Numeric \x, Numeric \y)`
+- `bezierCurveTo(Numeric \cx1, Numeric \cy1, Numeric \cx2, Numeric \cy2, Numeric \x, Numeric \y)`
+- `rect(Numeric \x, Numeric \y, Numeric \w, Numeric \h)`
+- `arc(Numeric \x, Numeric \y, Numeric \r, Numeric \startAngle, Numeric \endAngle, Bool \antiClockwise = False)`
+- `closePath()`
 
 ## Methods
 
@@ -231,9 +272,9 @@ The methods below implement the majority of the W3C [HTML Canvas 2D Context](htt
 
 #### `beginPath()`
 
-#### `fill()`
+#### `fill(FillRule $rule?)` or `fill(HTML::Canvas::Path2D $path, FillRule $rule?)`
 
-#### `stroke()`
+#### `stroke(HTML::Canvas::Path2D $path?)`
 
 #### `clip()`
 
